--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,32 +1,49 @@
 ﻿@{
     var pageId = Context.GetRouteValue("pageId");
-    //var pageId0 = Context.GetRouteValue("p0");
+    var pageId0 = Context.GetRouteValue("p0");
+    var pageId1 = Context.GetRouteValue("p1");
     //if(pageId == null){Response.SetStatus(HttpStatusCode.NotFound);}
-    
-    if (pageId == null){pageId = "default";}
+
+    if (pageId == null) { pageId = "default"; }
 
     var db = Database.Open("Datebase");
 
     var page = db.QuerySingle("SELECT * FROM Pages WHERE Url = @0", pageId);
-    if (page == null) {
-       /*try{
-        page = db.QuerySingle("SELECT * FROM Pages WHERE Id = @0", pageId);
-        } catch{*/
-            Response.SetStatus(HttpStatusCode.NotFound);    
-       // }
-        
+    
+    if (page == null){
+        Response.SetStatus(HttpStatusCode.NotFound);
     }
 
-
-
-   Page.Title = page.Name;
-   Page.Description = page.Description;
-   Page.Author = page.Author;
-   Layout = "~/Components/Layouts/_l" + page.Layout + ".cshtml";
-
-   
+    if (pageId0 == "manage"){
+        if (WebSecurity.IsAuthenticated){
+            if (pageId1 == "edit"){
+                <text>@Html.Raw(page.Content)</text> 
+            }
+        }else{
+            Response.Redirect("/Account/Login?ReturnUrl=" + Request.Url);
+        }
+        
+        if (pageId1 == "info"){
+            Layout = "~/Components/_PageInfoLayout.cshtml";
+            Page.Title = Page.Title = page.Name;
+            Page.Description = page.Description;
+            Page.Author = page.Author;
+            Page.Layout = page.Layout;
+            Page.Date = page.Date;
+            Page.Submitted = page.Submitted;
+            Page.Id = page.Id;
+            <text>@Html.Raw(page.Content)</text>
+        }
+    }else{
+        <text>@Html.Raw(page.Content)</text>
+        Page.Title = page.Name;
+        Page.Description = page.Description;
+        Page.Author = page.Author;
+        Layout = "~/Components/Layouts/_l" + page.Layout + ".cshtml";
+    }
+ 
 }
 
 
-@Html.Raw(page.Content)
+
 
