--- a/Account/Login.cshtml
+++ b/Account/Login.cshtml
@@ -81,7 +81,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
-    <title>Вход - Ceres Project</title>
+    <title>Вход - Greengrocery Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="~/Components/ui/css/Account.css" rel="stylesheet" />
 </head>
