--- a/Components/Control/NewPage.cshtml
+++ b/Components/Control/NewPage.cshtml
@@ -140,7 +140,7 @@
     <div class="b-form-button">
         <input type="submit" value="Сохранить" />
     </div>
-
+</form>
     <script src="~/Components/CKEditor/ckeditor.js"></script>
     <script src="~/Components/CKEditor/styles.js"></script>
 
