--- a/Components/Control/Menu.cshtml
+++ b/Components/Control/Menu.cshtml
@@ -90,7 +90,7 @@
     </div>
     <div class="b-form-item required">
         <label for="pagelink">Адрес ссылки:</label>
-        <input id="pagelink" class="input" type="email" name="pagelink" value="@pagelink" maxlength="250"/>
+        <input id="pagelink" class="input" type="text" name="pagelink" value="@pagelink" maxlength="250"/>
         <span style="display: none;" class="error error-uri"></span>
     </div>
     <div class="b-form-item required">
