--- a/Components/ErrorFiles/404.html
+++ b/Components/ErrorFiles/404.html
@@ -13,7 +13,7 @@
                 404 :(
             </span>
             <span class="b-page-text-h2">
-                Запрошеная страница не найдена.
+                Запрошенная страница не найдена.
             </span>
         </p>
         <p>
