--- a/Error.cshtml
+++ b/Error.cshtml
@@ -9,7 +9,7 @@
     if (error == 404)
     {
         Page.Title = "404 Not Found";
-        Page.Description = "Запрошеная страница не найдена";
+        Page.Description = "Запрошенная страница не найдена";
     }
     if (error == 500)
     {
